// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Meta renders with mandatory props 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-0 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-left: 8.333333333333334%;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 0 12px;
    margin-top: 24px;
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    margin-bottom: 48px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-1 {
    margin-bottom: 24px;
  }
}

@media screen {
  .emotion-2 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-2 {
    display: block;
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-top: calc(-16px/2);
  margin-bottom: calc(-16px/2);
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(16px/2);
  margin-bottom: calc(16px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-6 {
    max-width: 100%;
  }
}

.emotion-7 {
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 700;
  letter-spacing: 0;
  padding: 1px 0px;
}

.emotion-7::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3977678571428571em + 1.2px);
}

.emotion-7::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.6477678571428571em;
}

.emotion-8 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #162740;
}

.emotion-8 svg {
  fill: #162740;
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-11 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 24px;
  padding: 4px 8px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  color: #FFFFFF;
  background-color: #577FFB;
  border-radius: 20rem;
  white-space: nowrap;
}

.emotion-11 svg {
  width: 16px;
  height: 16px;
}

.emotion-11 svg {
  fill: #FFFFFF;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-13 {
    max-width: 100%;
  }
}

.emotion-14 {
  margin-bottom: 4px;
}

.emotion-15 {
  margin: 0;
  padding: 1px 0;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-15::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3977678571428571em + 1.2px);
}

.emotion-15::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.6477678571428571em;
}

.emotion-16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-16 {
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-17 {
    margin-right: 32px;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-17 {
    margin-right: 8px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-17 {
    margin-right: 16px;
  }
}

.emotion-18 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-top: calc(-20px/2);
  margin-bottom: calc(-20px/2);
}

.emotion-21 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(20px/2);
  margin-bottom: calc(20px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-21 {
    max-width: 100%;
  }
}

.emotion-25 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  color: #577FFB;
}

.emotion-25 svg {
  fill: #577FFB;
}

.emotion-25:hover:not(:disabled) {
  color: #3358CC;
}

.emotion-25:hover:not(:disabled) svg {
  fill: #3358CC;
}

.emotion-25:active:not(:disabled) {
  color: #213A82;
}

.emotion-25:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-25:visited:not(:disabled) {
  color: #503B8C;
}

.emotion-25:visited:not(:disabled) svg {
  fill: #503B8C;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-25 {
    vertical-align: text-bottom;
  }
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-27 {
  margin: 0;
  padding: 1px 0;
  font-family: 'Poppins',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  letter-spacing: 0;
  display: inline-block;
  display: block;
}

.emotion-27::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.290625em;
}

.emotion-27::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.540625em;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: calc(-16px/2);
  margin-right: calc(-16px/2);
}

.emotion-29 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(16px/2);
  margin-right: calc(16px/2);
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-29 {
    max-width: 100%;
  }
}

.emotion-30 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-31 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  width: 100%;
  padding: 8px 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: #555E74;
  border-width: 1px;
  border-radius: 20rem;
  color: #555E74;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-31 svg {
  width: 16px;
  height: 16px;
}

.emotion-31 svg {
  fill: #555E74;
}

.emotion-31:hover:not(:disabled) {
  background-color: #E4E4E4;
  border-color: #243853;
}

.emotion-31:active:not(:disabled) {
  background-color: #BBC3C9;
  border-color: #162740;
}

.emotion-31:disabled {
  border-color: #E4E4E4;
  color: #BBC3C9;
}

.emotion-31:disabled svg {
  fill: #BBC3C9;
}

.emotion-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-33 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-33 {
    max-width: 100%;
  }
}

.emotion-34 {
  fill: #555E74;
  vertical-align: unset;
  display: inline-block;
}

.emotion-36 {
  font-family: 'Poppins',sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 600;
  letter-spacing: 0;
}

.emotion-36::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3739583333333334em + -0.5px);
}

.emotion-36::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.6239583333333334em;
}

.emotion-37 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(16px/2);
  margin-right: calc(16px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-37 {
    max-width: 100%;
  }
}

@media screen {
  .emotion-38 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-38 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-38 {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-38 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-38 {
    display: none;
  }
}

.emotion-39 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-top: calc(-24px/2);
  margin-bottom: calc(-24px/2);
}

.emotion-40 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(24px/2);
  margin-bottom: calc(24px/2);
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-40 {
    max-width: 100%;
  }
}

.emotion-41 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-41 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    max-width: 50%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-41 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

.emotion-56 {
  margin-right: 32px;
}

.emotion-57 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
}

.emotion-57:before,
.emotion-57:after {
  content: '';
  display: block;
}

.emotion-67 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-68 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-68 {
    margin: -16px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-68 {
    margin: -16px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-68 {
    margin: -16px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-68 {
    margin: -24px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-68 {
    margin: -24px -12px 0 -12px;
  }
}

.emotion-69 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-69 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-69 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

.emotion-70 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

.emotion-71 {
  margin-bottom: 24px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-6"
              >
                <section
                  class="emotion-7"
                >
                  <h1
                    class="nk-headline-heading emotion-8"
                  >
                    Status
                  </h1>
                </section>
              </div>
              <div
                class="emotion-6"
              >
                <div
                  class="emotion-10"
                >
                  <div
                    class="emotion-11"
                    data-testid="flag"
                  >
                    <div
                      class="emotion-12"
                    >
                      <div
                        class="emotion-13"
                      >
                        <div
                          class="emotion-14"
                        >
                          <p
                            class="emotion-15"
                          >
                            Supported
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-16"
            >
              <div
                class="emotion-17"
              />
              <hr
                aria-hidden="true"
                class="emotion-18"
                data-testid="divider"
              />
              <div
                class="emotion-17"
              />
            </div>
            <div
              class="emotion-20"
            >
              <div
                class="emotion-21"
              >
                <section
                  class="emotion-7"
                >
                  <h1
                    class="nk-headline-heading emotion-8"
                  >
                    Introduced
                  </h1>
                </section>
              </div>
              <div
                class="emotion-21"
              >
                <a
                  class="emotion-25"
                  href="/"
                >
                  <span
                    class="emotion-26"
                  >
                    <span
                      class="emotion-27"
                    >
                      v0.1
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </div>
          <div
            class="emotion-28"
          >
            <div
              class="emotion-29"
            >
              <div
                class="emotion-30"
              >
                <a
                  class="emotion-31"
                  data-testid="buttonLink"
                  href="https://github.com/newscorp-ghfb/ncu-newskit"
                  target="_blank"
                >
                  <div
                    class="emotion-32"
                  >
                    <div
                      class="emotion-33"
                    >
                      <svg
                        aria-hidden="true"
                        class="emotion-34"
                        fill="currentColor"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11.9990792,2 C6.47773105,2 2,6.47565999 2,11.9970521 C2,16.4137976 4.86503576,20.1603908 8.83876117,21.4822847 C9.33908346,21.5743385 9.5214095,21.2656512 9.5214095,21.000536 C9.5214095,20.7636506 9.512815,20.1346157 9.50790386,19.3006075 C6.72635747,19.904481 6.13947635,17.9603029 6.13947635,17.9603029 C5.68458209,16.8053335 5.02894503,16.4978735 5.02894503,16.4978735 C4.12099819,15.878044 5.09770097,15.8903179 5.09770097,15.8903179 C6.10141502,15.9608925 6.62936247,16.9207077 6.62936247,16.9207077 C7.52134811,18.4481885 8.97013414,18.0069436 9.53982627,17.7510338 C9.63068234,17.1054292 9.88913104,16.6647979 10.174591,16.415025 C7.95414224,16.1627974 5.6195095,15.3048551 5.6195095,11.4741861 C5.6195095,10.3830406 6.00933116,9.49011794 6.64900703,8.79173579 C6.54587311,8.53889444 6.20270727,7.52200584 6.74722981,6.14610707 C6.74722981,6.14610707 7.5864207,5.87730972 9.4968538,7.17097368 C10.2943,6.94881697 11.150066,6.8383523 12.0003069,6.83405645 C12.849934,6.8383523 13.7050861,6.94881697 14.5037601,7.17097368 C16.4129654,5.87730972 17.2509285,6.14610707 17.2509285,6.14610707 C17.7966788,7.52200584 17.453513,8.53889444 17.350993,8.79173579 C17.9918966,9.49011794 18.3786488,10.3830406 18.3786488,11.4741861 C18.3786488,15.3146742 16.0403327,16.1597289 13.8131312,16.407047 C14.1716443,16.7157344 14.4914822,17.3257448 14.4914822,18.2585575 C14.4914822,19.5945663 14.4792044,20.6728241 14.4792044,21.000536 C14.4792044,21.2681059 14.6596888,21.5792481 15.1667639,21.481671 C19.1374198,20.1567087 22,16.4125702 22,11.9970521 C22,6.47565999 17.5222689,2 11.9990792,2"
                          fill-rule="nonzero"
                        />
                      </svg>
                    </div>
                    <div
                      class="emotion-33"
                    >
                      <span
                        class="emotion-36"
                      >
                        View code
                      </span>
                    </div>
                  </div>
                </a>
              </div>
            </div>
            <div
              class="emotion-37"
            />
          </div>
        </div>
      </div>
      <div
        class="emotion-38"
      >
        <div
          class="emotion-39"
        >
          <div
            class="emotion-40"
          >
            <div
              class="emotion-41"
            >
              <div
                class="emotion-5"
              >
                <div
                  class="emotion-6"
                >
                  <section
                    class="emotion-7"
                  >
                    <h1
                      class="nk-headline-heading emotion-8"
                    >
                      Status
                    </h1>
                  </section>
                </div>
                <div
                  class="emotion-6"
                >
                  <div
                    class="emotion-10"
                  >
                    <div
                      class="emotion-11"
                      data-testid="flag"
                    >
                      <div
                        class="emotion-12"
                      >
                        <div
                          class="emotion-13"
                        >
                          <div
                            class="emotion-14"
                          >
                            <p
                              class="emotion-15"
                            >
                              Supported
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-41"
            >
              <div
                class="emotion-4"
              >
                <hr
                  aria-hidden="true"
                  class="emotion-18"
                  data-testid="divider"
                />
                <div
                  class="emotion-56"
                />
                <div
                  class="emotion-57"
                />
                <div
                  class="emotion-20"
                >
                  <div
                    class="emotion-21"
                  >
                    <section
                      class="emotion-7"
                    >
                      <h1
                        class="nk-headline-heading emotion-8"
                      >
                        Introduced
                      </h1>
                    </section>
                  </div>
                  <div
                    class="emotion-21"
                  >
                    <a
                      class="emotion-25"
                      href="/"
                    >
                      <span
                        class="emotion-26"
                      >
                        <span
                          class="emotion-27"
                        >
                          v0.1
                        </span>
                      </span>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-40"
          >
            <div
              class="emotion-67"
            >
              <div
                class="emotion-68"
              >
                <div
                  class="emotion-69"
                >
                  <hr
                    aria-hidden="true"
                    class="emotion-70"
                    data-testid="divider"
                  />
                  <div
                    class="emotion-71"
                  />
                  <div
                    class="emotion-30"
                  >
                    <a
                      class="emotion-31"
                      data-testid="buttonLink"
                      href="https://github.com/newscorp-ghfb/ncu-newskit"
                      target="_blank"
                    >
                      <div
                        class="emotion-32"
                      >
                        <div
                          class="emotion-33"
                        >
                          <svg
                            aria-hidden="true"
                            class="emotion-34"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M11.9990792,2 C6.47773105,2 2,6.47565999 2,11.9970521 C2,16.4137976 4.86503576,20.1603908 8.83876117,21.4822847 C9.33908346,21.5743385 9.5214095,21.2656512 9.5214095,21.000536 C9.5214095,20.7636506 9.512815,20.1346157 9.50790386,19.3006075 C6.72635747,19.904481 6.13947635,17.9603029 6.13947635,17.9603029 C5.68458209,16.8053335 5.02894503,16.4978735 5.02894503,16.4978735 C4.12099819,15.878044 5.09770097,15.8903179 5.09770097,15.8903179 C6.10141502,15.9608925 6.62936247,16.9207077 6.62936247,16.9207077 C7.52134811,18.4481885 8.97013414,18.0069436 9.53982627,17.7510338 C9.63068234,17.1054292 9.88913104,16.6647979 10.174591,16.415025 C7.95414224,16.1627974 5.6195095,15.3048551 5.6195095,11.4741861 C5.6195095,10.3830406 6.00933116,9.49011794 6.64900703,8.79173579 C6.54587311,8.53889444 6.20270727,7.52200584 6.74722981,6.14610707 C6.74722981,6.14610707 7.5864207,5.87730972 9.4968538,7.17097368 C10.2943,6.94881697 11.150066,6.8383523 12.0003069,6.83405645 C12.849934,6.8383523 13.7050861,6.94881697 14.5037601,7.17097368 C16.4129654,5.87730972 17.2509285,6.14610707 17.2509285,6.14610707 C17.7966788,7.52200584 17.453513,8.53889444 17.350993,8.79173579 C17.9918966,9.49011794 18.3786488,10.3830406 18.3786488,11.4741861 C18.3786488,15.3146742 16.0403327,16.1597289 13.8131312,16.407047 C14.1716443,16.7157344 14.4914822,17.3257448 14.4914822,18.2585575 C14.4914822,19.5945663 14.4792044,20.6728241 14.4792044,21.000536 C14.4792044,21.2681059 14.6596888,21.5792481 15.1667639,21.481671 C19.1374198,20.1567087 22,16.4125702 22,11.9970521 C22,6.47565999 17.5222689,2 11.9990792,2"
                              fill-rule="nonzero"
                            />
                          </svg>
                        </div>
                        <div
                          class="emotion-33"
                        >
                          <span
                            class="emotion-36"
                          >
                            View code
                          </span>
                        </div>
                      </div>
                    </a>
                  </div>
                </div>
                <div
                  class="emotion-69"
                >
                  <div
                    class="emotion-71"
                  />
                  <hr
                    aria-hidden="true"
                    class="emotion-70"
                    data-testid="divider"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <hr
      aria-hidden="true"
      class="emotion-70"
      data-testid="divider"
    />
  </div>
</DocumentFragment>
`;

exports[`Meta renders with mandatory props and figma button 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-0 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-left: 8.333333333333334%;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 0 12px;
    margin-top: 24px;
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

@media screen and (max-width: 767px) {
  .emotion-1 {
    margin-bottom: 48px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-1 {
    margin-bottom: 24px;
  }
}

@media screen {
  .emotion-2 {
    display: none;
  }
}

@media screen and (min-width: 480px) {
  .emotion-2 {
    display: none;
  }
}

@media screen and (min-width: 768px) {
  .emotion-2 {
    display: block;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-2 {
    display: block;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-2 {
    display: block;
  }
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-top: calc(-16px/2);
  margin-bottom: calc(-16px/2);
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(16px/2);
  margin-bottom: calc(16px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-6 {
    max-width: 100%;
  }
}

.emotion-7 {
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 700;
  letter-spacing: 0;
  padding: 1px 0px;
}

.emotion-7::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3977678571428571em + 1.2px);
}

.emotion-7::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.6477678571428571em;
}

.emotion-8 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #162740;
}

.emotion-8 svg {
  fill: #162740;
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-11 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 24px;
  padding: 4px 8px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  color: #FFFFFF;
  background-color: #577FFB;
  border-radius: 20rem;
  white-space: nowrap;
}

.emotion-11 svg {
  width: 16px;
  height: 16px;
}

.emotion-11 svg {
  fill: #FFFFFF;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-13 {
    max-width: 100%;
  }
}

.emotion-14 {
  margin-bottom: 4px;
}

.emotion-15 {
  margin: 0;
  padding: 1px 0;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.7142857142857142;
  font-weight: 700;
  letter-spacing: 0;
}

.emotion-15::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3977678571428571em + 1.2px);
}

.emotion-15::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.6477678571428571em;
}

.emotion-16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-16 {
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) and (max-width: 1023px) {
  .emotion-17 {
    margin-right: 32px;
  }
}

@media screen and (min-width: 1024px) and (max-width: 1439px) {
  .emotion-17 {
    margin-right: 8px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-17 {
    margin-right: 16px;
  }
}

.emotion-18 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-left-width: 1px;
  display: inline-block;
  height: 100%;
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-top: calc(-20px/2);
  margin-bottom: calc(-20px/2);
}

.emotion-21 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(20px/2);
  margin-bottom: calc(20px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-21 {
    max-width: 100%;
  }
}

.emotion-25 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  color: #577FFB;
}

.emotion-25 svg {
  fill: #577FFB;
}

.emotion-25:hover:not(:disabled) {
  color: #3358CC;
}

.emotion-25:hover:not(:disabled) svg {
  fill: #3358CC;
}

.emotion-25:active:not(:disabled) {
  color: #213A82;
}

.emotion-25:active:not(:disabled) svg {
  fill: #213A82;
}

.emotion-25:visited:not(:disabled) {
  color: #503B8C;
}

.emotion-25:visited:not(:disabled) svg {
  fill: #503B8C;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-25 {
    vertical-align: text-bottom;
  }
}

.emotion-26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-27 {
  margin: 0;
  padding: 1px 0;
  font-family: 'Poppins',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
  letter-spacing: 0;
  display: inline-block;
  display: block;
}

.emotion-27::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.290625em;
}

.emotion-27::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.540625em;
}

.emotion-28 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: calc(-16px/2);
  margin-right: calc(-16px/2);
}

.emotion-29 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(16px/2);
  margin-right: calc(16px/2);
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-29 {
    max-width: 100%;
  }
}

.emotion-30 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-31 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  width: 100%;
  padding: 8px 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: #555E74;
  border-width: 1px;
  border-radius: 20rem;
  color: #555E74;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-31 svg {
  width: 16px;
  height: 16px;
}

.emotion-31 svg {
  fill: #555E74;
}

.emotion-31:hover:not(:disabled) {
  background-color: #E4E4E4;
  border-color: #243853;
}

.emotion-31:active:not(:disabled) {
  background-color: #BBC3C9;
  border-color: #162740;
}

.emotion-31:disabled {
  border-color: #E4E4E4;
  color: #BBC3C9;
}

.emotion-31:disabled svg {
  fill: #BBC3C9;
}

.emotion-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-33 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-33 {
    max-width: 100%;
  }
}

.emotion-34 {
  fill: #555E74;
  vertical-align: unset;
  display: inline-block;
}

.emotion-36 {
  font-family: 'Poppins',sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 600;
  letter-spacing: 0;
}

.emotion-36::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3739583333333334em + -0.5px);
}

.emotion-36::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.6239583333333334em;
}

.emotion-37 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(16px/2);
  margin-right: calc(16px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-37 {
    max-width: 100%;
  }
}

@media screen {
  .emotion-45 {
    display: block;
  }
}

@media screen and (min-width: 480px) {
  .emotion-45 {
    display: block;
  }
}

@media screen and (min-width: 768px) {
  .emotion-45 {
    display: none;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-45 {
    display: none;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-45 {
    display: none;
  }
}

.emotion-46 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-top: calc(-24px/2);
  margin-bottom: calc(-24px/2);
}

.emotion-47 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(24px/2);
  margin-bottom: calc(24px/2);
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-47 {
    max-width: 100%;
  }
}

.emotion-48 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-48 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 50%;
    -ms-flex-preferred-size: 50%;
    flex-basis: 50%;
    max-width: 50%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-48 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

.emotion-63 {
  margin-right: 32px;
}

.emotion-64 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
}

.emotion-64:before,
.emotion-64:after {
  content: '';
  display: block;
}

.emotion-74 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-75 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-75 {
    margin: -16px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-75 {
    margin: -16px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-75 {
    margin: -16px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-75 {
    margin: -24px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-75 {
    margin: -24px -12px 0 -12px;
  }
}

.emotion-76 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-76 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-76 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

.emotion-77 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

.emotion-78 {
  margin-bottom: 24px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-6"
              >
                <section
                  class="emotion-7"
                >
                  <h1
                    class="nk-headline-heading emotion-8"
                  >
                    Status
                  </h1>
                </section>
              </div>
              <div
                class="emotion-6"
              >
                <div
                  class="emotion-10"
                >
                  <div
                    class="emotion-11"
                    data-testid="flag"
                  >
                    <div
                      class="emotion-12"
                    >
                      <div
                        class="emotion-13"
                      >
                        <div
                          class="emotion-14"
                        >
                          <p
                            class="emotion-15"
                          >
                            Supported
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-16"
            >
              <div
                class="emotion-17"
              />
              <hr
                aria-hidden="true"
                class="emotion-18"
                data-testid="divider"
              />
              <div
                class="emotion-17"
              />
            </div>
            <div
              class="emotion-20"
            >
              <div
                class="emotion-21"
              >
                <section
                  class="emotion-7"
                >
                  <h1
                    class="nk-headline-heading emotion-8"
                  >
                    Introduced
                  </h1>
                </section>
              </div>
              <div
                class="emotion-21"
              >
                <a
                  class="emotion-25"
                  href="/"
                >
                  <span
                    class="emotion-26"
                  >
                    <span
                      class="emotion-27"
                    >
                      v0.1
                    </span>
                  </span>
                </a>
              </div>
            </div>
          </div>
          <div
            class="emotion-28"
          >
            <div
              class="emotion-29"
            >
              <div
                class="emotion-30"
              >
                <a
                  class="emotion-31"
                  data-testid="buttonLink"
                  href="https://github.com/newscorp-ghfb/ncu-newskit"
                  target="_blank"
                >
                  <div
                    class="emotion-32"
                  >
                    <div
                      class="emotion-33"
                    >
                      <svg
                        aria-hidden="true"
                        class="emotion-34"
                        fill="currentColor"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M11.9990792,2 C6.47773105,2 2,6.47565999 2,11.9970521 C2,16.4137976 4.86503576,20.1603908 8.83876117,21.4822847 C9.33908346,21.5743385 9.5214095,21.2656512 9.5214095,21.000536 C9.5214095,20.7636506 9.512815,20.1346157 9.50790386,19.3006075 C6.72635747,19.904481 6.13947635,17.9603029 6.13947635,17.9603029 C5.68458209,16.8053335 5.02894503,16.4978735 5.02894503,16.4978735 C4.12099819,15.878044 5.09770097,15.8903179 5.09770097,15.8903179 C6.10141502,15.9608925 6.62936247,16.9207077 6.62936247,16.9207077 C7.52134811,18.4481885 8.97013414,18.0069436 9.53982627,17.7510338 C9.63068234,17.1054292 9.88913104,16.6647979 10.174591,16.415025 C7.95414224,16.1627974 5.6195095,15.3048551 5.6195095,11.4741861 C5.6195095,10.3830406 6.00933116,9.49011794 6.64900703,8.79173579 C6.54587311,8.53889444 6.20270727,7.52200584 6.74722981,6.14610707 C6.74722981,6.14610707 7.5864207,5.87730972 9.4968538,7.17097368 C10.2943,6.94881697 11.150066,6.8383523 12.0003069,6.83405645 C12.849934,6.8383523 13.7050861,6.94881697 14.5037601,7.17097368 C16.4129654,5.87730972 17.2509285,6.14610707 17.2509285,6.14610707 C17.7966788,7.52200584 17.453513,8.53889444 17.350993,8.79173579 C17.9918966,9.49011794 18.3786488,10.3830406 18.3786488,11.4741861 C18.3786488,15.3146742 16.0403327,16.1597289 13.8131312,16.407047 C14.1716443,16.7157344 14.4914822,17.3257448 14.4914822,18.2585575 C14.4914822,19.5945663 14.4792044,20.6728241 14.4792044,21.000536 C14.4792044,21.2681059 14.6596888,21.5792481 15.1667639,21.481671 C19.1374198,20.1567087 22,16.4125702 22,11.9970521 C22,6.47565999 17.5222689,2 11.9990792,2"
                          fill-rule="nonzero"
                        />
                      </svg>
                    </div>
                    <div
                      class="emotion-33"
                    >
                      <span
                        class="emotion-36"
                      >
                        View code
                      </span>
                    </div>
                  </div>
                </a>
              </div>
            </div>
            <div
              class="emotion-37"
            >
              <div
                class="emotion-30"
              >
                <a
                  class="emotion-31"
                  data-testid="buttonLink"
                  href="https://github.com/newscorp-ghfb/ncu-newskit"
                  target="_blank"
                >
                  <div
                    class="emotion-32"
                  >
                    <div
                      class="emotion-33"
                    >
                      <svg
                        aria-hidden="true"
                        class="emotion-34"
                        fill="currentColor"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M12.3333 12C12.3333 11.0275 12.7196 10.0949 13.4073 9.40729C14.0949 8.71965 15.0275 8.33334 16 8.33334C16.9724 8.33334 17.9051 8.71965 18.5927 9.40729C19.2803 10.0949 19.6666 11.0275 19.6666 12C19.6666 12.9725 19.2803 13.9051 18.5927 14.5927C17.9051 15.2804 16.9724 15.6667 16 15.6667C15.0275 15.6667 14.0949 15.2804 13.4073 14.5927C12.7196 13.9051 12.3333 12.9725 12.3333 12V12Z"
                          fill="#1ABCFE"
                        />
                        <path
                          d="M5 19.3333C5 18.3609 5.38631 17.4282 6.07394 16.7406C6.76158 16.053 7.69421 15.6667 8.66667 15.6667H12.3333V19.3333C12.3333 20.3058 11.947 21.2384 11.2594 21.926C10.5718 22.6137 9.63913 23 8.66667 23C7.69421 23 6.76158 22.6137 6.07394 21.926C5.38631 21.2384 5 20.3058 5 19.3333V19.3333Z"
                          fill="#0ACF83"
                        />
                        <path
                          d="M12.3333 1V8.33333H16C16.9724 8.33333 17.9051 7.94703 18.5927 7.25939C19.2803 6.57176 19.6666 5.63913 19.6666 4.66667C19.6666 3.69421 19.2803 2.76158 18.5927 2.07394C17.9051 1.38631 16.9724 1 16 1L12.3333 1Z"
                          fill="#FF7262"
                        />
                        <path
                          d="M5 4.66667C5 5.63913 5.38631 6.57176 6.07394 7.25939C6.76158 7.94703 7.69421 8.33333 8.66667 8.33333H12.3333V1H8.66667C7.69421 1 6.76158 1.38631 6.07394 2.07394C5.38631 2.76158 5 3.69421 5 4.66667V4.66667Z"
                          fill="#F24E1E"
                        />
                        <path
                          d="M5 12C5 12.9725 5.38631 13.9051 6.07394 14.5927C6.76158 15.2804 7.69421 15.6667 8.66667 15.6667H12.3333V8.33334H8.66667C7.69421 8.33334 6.76158 8.71965 6.07394 9.40729C5.38631 10.0949 5 11.0275 5 12V12Z"
                          fill="#A259FF"
                        />
                      </svg>
                    </div>
                    <div
                      class="emotion-33"
                    >
                      <span
                        class="emotion-36"
                      >
                        View Design
                      </span>
                    </div>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-45"
      >
        <div
          class="emotion-46"
        >
          <div
            class="emotion-47"
          >
            <div
              class="emotion-48"
            >
              <div
                class="emotion-5"
              >
                <div
                  class="emotion-6"
                >
                  <section
                    class="emotion-7"
                  >
                    <h1
                      class="nk-headline-heading emotion-8"
                    >
                      Status
                    </h1>
                  </section>
                </div>
                <div
                  class="emotion-6"
                >
                  <div
                    class="emotion-10"
                  >
                    <div
                      class="emotion-11"
                      data-testid="flag"
                    >
                      <div
                        class="emotion-12"
                      >
                        <div
                          class="emotion-13"
                        >
                          <div
                            class="emotion-14"
                          >
                            <p
                              class="emotion-15"
                            >
                              Supported
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="emotion-48"
            >
              <div
                class="emotion-4"
              >
                <hr
                  aria-hidden="true"
                  class="emotion-18"
                  data-testid="divider"
                />
                <div
                  class="emotion-63"
                />
                <div
                  class="emotion-64"
                />
                <div
                  class="emotion-20"
                >
                  <div
                    class="emotion-21"
                  >
                    <section
                      class="emotion-7"
                    >
                      <h1
                        class="nk-headline-heading emotion-8"
                      >
                        Introduced
                      </h1>
                    </section>
                  </div>
                  <div
                    class="emotion-21"
                  >
                    <a
                      class="emotion-25"
                      href="/"
                    >
                      <span
                        class="emotion-26"
                      >
                        <span
                          class="emotion-27"
                        >
                          v0.1
                        </span>
                      </span>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-47"
          >
            <div
              class="emotion-74"
            >
              <div
                class="emotion-75"
              >
                <div
                  class="emotion-76"
                >
                  <hr
                    aria-hidden="true"
                    class="emotion-77"
                    data-testid="divider"
                  />
                  <div
                    class="emotion-78"
                  />
                  <div
                    class="emotion-30"
                  >
                    <a
                      class="emotion-31"
                      data-testid="buttonLink"
                      href="https://github.com/newscorp-ghfb/ncu-newskit"
                      target="_blank"
                    >
                      <div
                        class="emotion-32"
                      >
                        <div
                          class="emotion-33"
                        >
                          <svg
                            aria-hidden="true"
                            class="emotion-34"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M11.9990792,2 C6.47773105,2 2,6.47565999 2,11.9970521 C2,16.4137976 4.86503576,20.1603908 8.83876117,21.4822847 C9.33908346,21.5743385 9.5214095,21.2656512 9.5214095,21.000536 C9.5214095,20.7636506 9.512815,20.1346157 9.50790386,19.3006075 C6.72635747,19.904481 6.13947635,17.9603029 6.13947635,17.9603029 C5.68458209,16.8053335 5.02894503,16.4978735 5.02894503,16.4978735 C4.12099819,15.878044 5.09770097,15.8903179 5.09770097,15.8903179 C6.10141502,15.9608925 6.62936247,16.9207077 6.62936247,16.9207077 C7.52134811,18.4481885 8.97013414,18.0069436 9.53982627,17.7510338 C9.63068234,17.1054292 9.88913104,16.6647979 10.174591,16.415025 C7.95414224,16.1627974 5.6195095,15.3048551 5.6195095,11.4741861 C5.6195095,10.3830406 6.00933116,9.49011794 6.64900703,8.79173579 C6.54587311,8.53889444 6.20270727,7.52200584 6.74722981,6.14610707 C6.74722981,6.14610707 7.5864207,5.87730972 9.4968538,7.17097368 C10.2943,6.94881697 11.150066,6.8383523 12.0003069,6.83405645 C12.849934,6.8383523 13.7050861,6.94881697 14.5037601,7.17097368 C16.4129654,5.87730972 17.2509285,6.14610707 17.2509285,6.14610707 C17.7966788,7.52200584 17.453513,8.53889444 17.350993,8.79173579 C17.9918966,9.49011794 18.3786488,10.3830406 18.3786488,11.4741861 C18.3786488,15.3146742 16.0403327,16.1597289 13.8131312,16.407047 C14.1716443,16.7157344 14.4914822,17.3257448 14.4914822,18.2585575 C14.4914822,19.5945663 14.4792044,20.6728241 14.4792044,21.000536 C14.4792044,21.2681059 14.6596888,21.5792481 15.1667639,21.481671 C19.1374198,20.1567087 22,16.4125702 22,11.9970521 C22,6.47565999 17.5222689,2 11.9990792,2"
                              fill-rule="nonzero"
                            />
                          </svg>
                        </div>
                        <div
                          class="emotion-33"
                        >
                          <span
                            class="emotion-36"
                          >
                            View code
                          </span>
                        </div>
                      </div>
                    </a>
                  </div>
                </div>
                <div
                  class="emotion-76"
                >
                  <div
                    class="emotion-30"
                  >
                    <a
                      class="emotion-31"
                      data-testid="buttonLink"
                      href="https://github.com/newscorp-ghfb/ncu-newskit"
                      target="_blank"
                    >
                      <div
                        class="emotion-32"
                      >
                        <div
                          class="emotion-33"
                        >
                          <svg
                            aria-hidden="true"
                            class="emotion-34"
                            fill="currentColor"
                            viewBox="0 0 24 24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M12.3333 12C12.3333 11.0275 12.7196 10.0949 13.4073 9.40729C14.0949 8.71965 15.0275 8.33334 16 8.33334C16.9724 8.33334 17.9051 8.71965 18.5927 9.40729C19.2803 10.0949 19.6666 11.0275 19.6666 12C19.6666 12.9725 19.2803 13.9051 18.5927 14.5927C17.9051 15.2804 16.9724 15.6667 16 15.6667C15.0275 15.6667 14.0949 15.2804 13.4073 14.5927C12.7196 13.9051 12.3333 12.9725 12.3333 12V12Z"
                              fill="#1ABCFE"
                            />
                            <path
                              d="M5 19.3333C5 18.3609 5.38631 17.4282 6.07394 16.7406C6.76158 16.053 7.69421 15.6667 8.66667 15.6667H12.3333V19.3333C12.3333 20.3058 11.947 21.2384 11.2594 21.926C10.5718 22.6137 9.63913 23 8.66667 23C7.69421 23 6.76158 22.6137 6.07394 21.926C5.38631 21.2384 5 20.3058 5 19.3333V19.3333Z"
                              fill="#0ACF83"
                            />
                            <path
                              d="M12.3333 1V8.33333H16C16.9724 8.33333 17.9051 7.94703 18.5927 7.25939C19.2803 6.57176 19.6666 5.63913 19.6666 4.66667C19.6666 3.69421 19.2803 2.76158 18.5927 2.07394C17.9051 1.38631 16.9724 1 16 1L12.3333 1Z"
                              fill="#FF7262"
                            />
                            <path
                              d="M5 4.66667C5 5.63913 5.38631 6.57176 6.07394 7.25939C6.76158 7.94703 7.69421 8.33333 8.66667 8.33333H12.3333V1H8.66667C7.69421 1 6.76158 1.38631 6.07394 2.07394C5.38631 2.76158 5 3.69421 5 4.66667V4.66667Z"
                              fill="#F24E1E"
                            />
                            <path
                              d="M5 12C5 12.9725 5.38631 13.9051 6.07394 14.5927C6.76158 15.2804 7.69421 15.6667 8.66667 15.6667H12.3333V8.33334H8.66667C7.69421 8.33334 6.76158 8.71965 6.07394 9.40729C5.38631 10.0949 5 11.0275 5 12V12Z"
                              fill="#A259FF"
                            />
                          </svg>
                        </div>
                        <div
                          class="emotion-33"
                        >
                          <span
                            class="emotion-36"
                          >
                            View Design
                          </span>
                        </div>
                      </div>
                    </a>
                  </div>
                  <div
                    class="emotion-78"
                  />
                  <hr
                    aria-hidden="true"
                    class="emotion-77"
                    data-testid="divider"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <hr
      aria-hidden="true"
      class="emotion-77"
      data-testid="divider"
    />
  </div>
</DocumentFragment>
`;
